--- a/tweb/atv grid/index.html
+++ b/tweb/atv grid/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>au</title>
-    <link rel="stylesheet" type="text/css" href="../atv grid/index.css">
+    <link rel="stylesheet" type="text/css" href="../teste/index.css">
 </head>
 <body>
     <section class="container">
@@ -30,6 +30,7 @@
         <div class="item caixa1-3">item 4</div>
         <div class="item caixa2-3">item 5</div>
         <div class="item footer-3">item 6</div>
+        <div class="item parte">item 7</div>
     </section>
 
     <section class="container4">
