--- a/tweb/projeto 2/html/index.html
+++ b/tweb/projeto 2/html/index.html
@@ -16,13 +16,13 @@
             <nav>
                 <ul class="nav">
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Expertises</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#expertises">Expertises</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav> 
             
-            <img class="img img2" src="file:///C:/Users/Aluno/Downloads/projeto_II/imgs/brand.svg">
+            <img class="img img2" src="https://raw.githubusercontent.com/Andre-nemesis/tweb/35edb2d974391265e39ac6a8ad1191325425e5fa/tweb/projeto%202/imgs/brand.svg">
 
         </div>
         
@@ -36,24 +36,72 @@
 
     </section>
 
-    <section class="sec2">
-        <h1>About</h1>
-        <div>
-            <h1>Lorem Ipsum</h1>
+    <section class="sec2" id="about">
+        <div class="tex-sec2">
+            <h1>About</h1>
+            <h2>Lorem Ipsum</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum dolores hic assumenda 
                 sint cum, fugit ratione odit impedit perspiciatis quod at quis molestias velit corporis et. 
+                Deserunt veniam beatae fuga.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum dolores hic assumenda 
+                sint cum, fugit ratione odit impedit perspiciatis quod at quis molestias velit corporis et. 
                 Deserunt veniam beatae fuga.</p>
-            <img src="file:///C:/Users/Aluno/Downloads/projeto_II/imgs/img-8.jpg">
+        </div>
+            <img src="https://github.com/Andre-nemesis/tweb/blob/main/tweb/projeto%202/imgs/img-8.jpg?raw=true">
+    </section>
+
+    <section class="sec3" id="expertises">
+        <h1 class="tt">Expertises</h1>
+        <div class="b1 b-11">
+            <img src="https://github.com/Andre-nemesis/tweb/blob/main/tweb/projeto%202/imgs/img-4.jpg?raw=true">
+            <h2>Development</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quam, 
+                molestiae atque explicabo officiis voluptates enim similique dolores</p>
+        </div>
+
+        <div class="b2 b-22">
+            <img src="https://github.com/Andre-nemesis/tweb/blob/main/tweb/projeto%202/imgs/img-5.jpg?raw=true">
+            <h2>Codding & Designing</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quam, 
+                molestiae atque explicabo officiis voluptates enim similique dolores</p>
+        </div>
+
+        <div class="b3 b-33">
+            <img src="https://github.com/Andre-nemesis/tweb/blob/main/tweb/projeto%202/imgs/img-6.jpg?raw=true">
+            <h2>Graphic Design</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quam, 
+                molestiae atque explicabo officiis voluptates enim similique dolores</p>
+        </div>
+
+        <div class="b4 b-44">
+            <img src="https://github.com/Andre-nemesis/tweb/blob/main/tweb/projeto%202/imgs/img-7.jpg?raw=true">
+            <h2>UX Design</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quam, 
+                molestiae atque explicabo officiis voluptates enim similique dolores</p>
+        </div>
+
+    </section>
+
+    <section class="sec4" id="contact">
+        <div class="sec4-t1 sec4-t11">
+            <h1 class="tit">Contact Us</h1>
+            <textarea class="name" rows="2" cols="30" minlength="20" maxlength="50" disabled>name</textarea>
+            <textarea class="email" rows="2" cols="30" minlength="20" maxlength="50" disabled>E-mail</textarea>
+            <textarea class="msg" rows="2" cols="30" minlength="20" maxlength="50" disabled>Your Mensage</textarea>
+            <h2 class="send" rows="2" cols="30" minlength="20" maxlength="50" disabled>Send Mensage</h2>
+        </div>
+
+        <div class="sec4-t2 sec4-t22">
+            <h1>Contact Us</h1>
+            <p>Contact us and wel'll get back to you within 24 hours.<br>
+                Adrress:12345 Fake ST NoWhere AB Country<br>
+                E-mail: info@website.com<br>
+                Phone: (123)456-7890
+            </p>
         </div>
     </section>
 
-    <section>
-
-    </section>
-
-    <section>
-
-    </section>
-
+    <footer>
+        <p class="foot">©2022 André Casimiro</p>
+    </footer>
 </body>
 </html>
